hphp/hack/test/typecheck/unused_awaitable10.php.exp
File "unused_awaitable10.php", line 15, characters 8-9:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable10.php", line 3, characters 21-34:
This is why I think it is `Awaitable`
File "unused_awaitable10.php", line 15, characters 14-15:
This expression is of type `Awaitable`, but it's either being discarded or used in a dangerous way before being awaited (Typing[4015])
File "unused_awaitable10.php", line 7, characters 21-35:
This is why I think it is `Awaitable`
